--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -60,7 +60,7 @@ buffer application I/O data.
 We implemented a prototype of our proposal architecture, evaluated in Amazon EC2/S3(one of the most
 common public cloud today).
 We shows our system can achieve a significant improvement in I/O throughput for shared storage
-in cloud computing through experimental and simulational evaluation.
+in cloud computing through experimental and simulation evaluation.
 \end{abstract}
 
 %start key word
