--- a/paper/src/related_work.tex
+++ b/paper/src/related_work.tex
@@ -21,18 +21,18 @@ parsers on Amazon cloud for querying large web public RDF datasets.
 Peter Wittek el at.\cite{XML_Processing_in_the_Cloud} combined an implementation-independent
 workflowdesigner with cloud computing to support small institution in ad-hoc peak computing needs.
 Richard Anthony el at.\cite{Cloud_computing_applications_for_large-scale_satellite_ground_systems}
-discuss the applicability of cloud computing to large-scale satellite ground 
+discussed the applicability of cloud computing to large-scale satellite ground 
 systems.
 However these work only focus on how to run these large scale application on cloud, they didn't
 consider the way to increase I/O throughput to shared storage.
 
 I/O throughput problem is a critical part in cloud computing, and many work are focus on this
 topic.
-Abhishek Gupta el at.\cite{Towards_Efficient_Mapping} try to improve the execution of HPC
+Abhishek Gupta el at.\cite{Towards_Efficient_Mapping} tried to improve the execution of HPC
 application in cloud by making a cloud-aware scheduler, and change the cloud environment
 dynamically to improve the overall performance.
-Matthias Hovestadt el at.\cite{Evaluating_Adaptive_Compression} consider another way to improve the
-I/O performance.
+Matthias Hovestadt el at.\cite{Evaluating_Adaptive_Compression} considered another way to improve
+the I/O performance.
 They propose a new adaptive compression scheme for virtualized environments, and improve the I/O
 performance by compress the I/O data.
 Hongtao Du el at.\cite{DHFS:_A_High-Throughput_Heterogeneous_File_System_Based_on_Mainframe_for_Cloud_Storage}
