--- a/paper/src/architecture.tex
+++ b/paper/src/architecture.tex
@@ -9,7 +9,7 @@ The main idea is that some of computing nodes serve as a I/O buffer nodes in eac
 Actually, since many jobs use multiple nodes work together and the output of some nodes can be the
 input of the others, so for most cases, output data will still be buffered in buffer queue until the whole job finished.
 As for reading, if that file is stored in the buffer queue, compute nodes can read from I/O nodes through interconnection network.
-In other cases (buffer queue is full when issue a write request or requested file is not stored in buffer queue when issue a read request we call it cache miss), an read from or write back operation described below will be executed. 
+In other cases (buffer queue is full when issue a write request or requested file is not stored in buffer queue when issue a read request we call it cache miss), a read from or write back operation described below will be executed. 
 
 \subsection{Target Environment}
 First, we introduce our target environment.
@@ -31,7 +31,9 @@ we target at common cloud environment like Amazon EC2, which compute node and da
 \end{figure}
 
 There are two kinds of nodes in our I/O burst buffer architecture: \emph{compute nodes} and \emph{I/O burst nodes}, compute nodes run user's application and I/O burst nodes.
-Public clouds usually provide several type of instance for difference purpose, some are compute optimized(like C3 instances provided by Amazon) provides a high compute performance,
-some are memory optimized (such as R3 instances in Amazon EC2) provide a huge amount of memory(up to 244GB in R3 family), also memory size can be easily expanded by using solid storage driver(SSD) as a swap device, usually such instances have SSD inside.
+Public clouds usually provide several type of instance for difference purpose, some are compute
+optimized (like C3 instances provided by Amazon) provides a high compute performance, some are memory optimized (such as R3 instances in Amazon EC2) provide a huge amount of memory (up
+to 244GB in R3 family), also memory size can be easily expanded by using solid storage driver (SSD)
+as a swap device, usually such instances have SSD inside.
 
-Fig.~\ref{architecture:overview} shows a overall illustrate of I/O burst buffer architecture.
+Fig.~\ref{architecture:overview} shows an overall illustrate of I/O burst buffer architecture.
