--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -78,12 +78,12 @@ throughput which is also 1Gbps(135MB/s).
 
 In the second experiment, we measured the throughput of multiple clients.
 It shows the overall throughput the whole system can achieve.
-To simplified the experiment, we assume that one client connect to only one I/O nodes, and one I/O
+To simplify the experiment, we assume that one client connects to only one I/O nodes, and one I/O
 nodes buffer all the I/O data for a client.
 Figure.~\ref{evaluation:multiple user performance} shows the overall throughput of the whole system.
-First we see the result of traditional solution in which all compute node connect to shared storage
+First we see the result of traditional solution in which all compute nodes connect to shared storage
 and read write data concurrently.
-However, since the connection bandwidth of shared storage which is the Internet bandwidth is only
+However, since the connection bandwidth of shared storage, which is the Internet bandwidth is only
 1Gbps, the overall throughput grows at first, and quickly hit the limitation.
 
 Then we look at the result using our system.
@@ -119,7 +119,7 @@ compute time (s)		&	18.680705	&		1150.97979	&		1351.987268		\\
 
 In this section, we simulate the execution of the three applications shown in
 Table.~\ref{background:work flow applications} on our prototype system.
-Since the I/O throughput of one compute node will be affected by the I/O from other compute nodes,
+Since the I/O from other compute nodes will affect the I/O throughput of one compute node,
 in order to simulate the execution of different number of compute node and find the throughput of
 one compute node.
 First we make several assumptions:
@@ -146,7 +146,7 @@ $i$ compute node, so we can sum it up and get the final throughput:
 
 Figure.~\ref{evaluation:simulation throughput} shows the one compute node throughput with 8 I/O
 nodes for different number of compute nodes, since for buffered file, compute nodes can assess these
-file from I/O nodes, the read an write throughput are both equal to I/O nodes throughput.
+files from I/O nodes, the read and write throughput are both equal to I/O nodes throughput.
 Since we buffer all the output data, there is only read case can access to unbuffered file which
 can only achieve a low throughput.
 
@@ -174,10 +174,10 @@ applications.
 \label{evaluation:simulation result supernovae}
 \end{figure}
 
-As we can see from Figure.~\ref{evaluation:simulation result montage,evaluation:simulation result
-pov ray,evaluation:simulation result supernovae}, by using our system, all three application
-achieved a high improvement.
-Among them, Montage has the most largest improvement since it I/O a lot but do not do many
+As we can see from Figure.~\ref{evaluation:simulation result montage},\ref{evaluation:simulation
+result pov ray},\ref{evaluation:simulation result supernovae}, by using our system, all three
+application achieved a high improvement.
+Among them, Montage has the largest improvement since it I/O a lot but do not do much
 computation.
-On the contrary, Pov Ray has a heavy computation, and a small I/O size, and get a small performance
+On the contrary, Pov Ray has a heavy computation, and a small I/O size, and gets a small performance
 improvement by using our system.
