--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -51,7 +51,7 @@ EC2, and mount storage system by sshfs\cite{sshfs} via Internet.
 \label{evaluation:one user performance}
 \end{figure}
 
-First we measure the performance of our prototype for only one user, and shows how our system
+First we measure the performance of our prototype for only one user, and show how our system
 will affect one user performance.
 In this experiment, the number of client is fixed to one, and measure
 the sequential read and write performance for different number of I/O nodes.
@@ -176,7 +176,7 @@ applications.
 
 As we can see from Figure.~\ref{evaluation:simulation result montage},\ref{evaluation:simulation
 result pov ray},\ref{evaluation:simulation result supernovae}, by using our system, all three
-application achieved a high improvement.
+applications achieved a high improvement.
 Among them, Montage has the largest improvement since it I/O a lot but do not do much
 computation.
 On the contrary, Pov Ray has a heavy computation, and a small I/O size, and gets a small performance
