--- a/paper/src/implementation.tex
+++ b/paper/src/implementation.tex
@@ -163,6 +163,6 @@ limitations. It is difficult to change the file size after buffered it, as well 
 benefit gain by using dirty flag.
 
 Third, in the node addition and deletion, there is no load balance in our prototype.
-Without load balance, after node added into the system, it need a long time to achieve speed up.
+Without load balance, after node added into the system, it needs a long time to achieve speed up.
 Also in the node deletion, file write back and re-buffer are required.
 
