--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -8,10 +8,10 @@ Cloud provide a fast setup, usually cloud instances can set up in a few minutes,
 make the on-demand usage available.
 Such cloud environment is suitable for large scale
 computation, by using cloud users don't need a large scale supercomputer and only need to pay
-what they run, instead of dealing with expensive hardware ,software and machine maintenance.
-These characteristics makes cloud very attractive to large scale applications.
+what they run, instead of dealing with expensive hardware, software and machine maintenance.
+These characteristics make cloud very attractive to large-scale applications.
 
-Large scale applications often require high I/O
+Large-scale applications often require high I/O
 throughput and data sharing between different nodes, different workflow and even different jobs.
 In such cases, applications require not only high bandwidth network as well as a high throughput
 shared storage in order to share data between different work flow or difference jobs.
@@ -24,7 +24,7 @@ running time from several hours to several days, machine failure is Inevitable a
 fast recovery from machine failure\cite{checkpointing}, in order to make a timely checkpoint, a
 fast global shared storage is indispensable.
 
-However, In current cloud environment, the global shared storage can not meet the demand.
+However, in current cloud environment, the global shared storage can not meet the demand.
 For example, in Amazon public cloud system, there are a famous shared storage called \emph{Amazon
 Simple Storage Service} (Amazon S3)\cite{AMAZON_AWS}, however compared to the throughput of shared
 storage system in high performance computing system, Amazon S3 can only achieve a extremely low throughput,
