--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,4 +1,5 @@
-\documentclass[10pt, conference, compsocconf]{IEEEtran}
+%\documentclass[10pt, conference, compsocconf]{IEEEtran}
+\documentclass[conference,compsoc]{IEEEtran}
 \usepackage{color}
 \usepackage{supertabular}
 \usepackage{graphicx}
@@ -16,10 +17,9 @@
 \title{A Design and Prototype of Cloud Based Burst Buffer to Burst Data Intensive Application on the
 Cloud}
 
-
 \author{
 \IEEEauthorblockN{Tianqi Xu}
-	\IEEEauthorblockA{Dept. of Mathematical and Computing Sciences\\
+	\IEEEauthorblockA{Dept. of Mathematical\\and Computing Sciences\\
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
@@ -32,7 +32,7 @@ Cloud}
 	Email: ?}
 	\and
 	\IEEEauthorblockN{Satoshi Matsuoka}
-	\IEEEauthorblockA{Global Scientific Information and Computing Center\\
+	\IEEEauthorblockA{Global Scientific \\Information and Computing Center\\
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
