--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -1,6 +1,7 @@
 %to do
 \section{background}
 \label{sec:background}
+\begin{comment}
 \subsection{Cloud Computing}
 \begin{figure}
 \centering
@@ -33,6 +34,7 @@ Cloud computing can have following benefits:
   \item Users don't need to pay for expensive hardware and software, they just need to pay for what
   they used.
 \end{itemize}
+\end{comment}
 
 \subsection{Interconnection Network vs. Shared Storage}
 \begin{figure}
@@ -91,6 +93,10 @@ output data in burst buffer, application can go ahead without waiting data be fi
 storage.
 
 \subsection{Data Locality}
+\begin{comment}
+add other kinds of application data locality details.
+as more as possible
+\end{comment}
 
 \begin{table}
 \centering
@@ -100,7 +106,8 @@ Montage		&		a portable software toolkit for constructing custom, science-grade
 mosaics by composing multiple astronomical images\cite{montage}.\\\hline
 pov ray		&		a ray tracing program which generates images from a text-based scene description, and is
 available for a variety of computer platforms\cite{povray}.\\\hline
-SExtractor	&	a program that builds a catalogue of objects from an astronomical image	\\
+SExtractor	&	a program that builds a catalogue of objects from an astronomical image	\\%bierf
+% introction of supernovea and sextractor and 
 \hline
 \end{tabular}
 \caption{Work Flow Applications}
