--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -17,6 +17,7 @@
 
 
 \newcommand {\xtq}[1] {\begin{color}{red}{[XTQ : #1]}\end{color}}
+%\newcommand {\xtq}[1] {}
 %start title
 %\title{Studies of Cloud Based Burst Buffers to Burst Data Intensive Application on
 %the Cloud}
