--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -141,8 +141,8 @@ compute node can achieve $\frac{1}{i+1}$ of the total throughput of I/O node whe
 $i$ compute node, so we can sum it up and get the final throughput:
 \begin{equation}
 \text{Throughput}=\sum_{i=0}^{n-1} \frac{\text{rate}_i}{i+1} \times T
-\text{T}=\frac{T}{e} 
-e=1+\frac{n-1}{m}
+%\text{T}=\frac{T}{e} 
+%e=1+\frac{n-1}{m}
 \end{equation}
 
 With above assumptions, then we can calculate the rate of one compute node shared one I/O node with
