--- a/paper/src/ref/reference.bib
+++ b/paper/src/ref/reference.bib
@@ -436,3 +436,26 @@ month={Dec},
 pages={24-28}, 
 keywords={Linux;cloud computing;mainframes;meta data;open systems;DHFS;I-O nodes;Linux;Solaris;Unix;Windows;cloud storage mainframe;distributed structure;high-throughput distribute heterogeneous file system;mainframe open system accessing files;metadata server;performance optimization;user data;user-level library;Cloud computing;Delay;File systems;Open systems;Servers;Throughput;Writing;Cloud Storage;Distributed File System;Heterogeneous Share;High-Throughput}, 
 doi={10.1109/PAAP.2011.13},}
+
+@INPROCEEDINGS{Input/output_behavior_of_supercomputing_applications, 
+author={Miller, E.L. and Katz, R.H.}, 
+booktitle={Supercomputing, 1991. Supercomputing '91. Proceedings of the 1991 ACM/IEEE Conference on}, 
+title={Input/output behavior of supercomputing applications}, 
+year={1991}, 
+month={Nov}, 
+pages={567-576}, 
+doi={10.1145/125826.126133},}
+
+@webpage{fitsio,
+	title = "FITSIO",
+	organization ="",
+	url = "http://heasarc.gsfc.nasa.gov/fitsio/",
+	refdate = "",
+}
+
+@webpage{SExtractor,
+	title = "SExtractor",
+	organization ="",
+	url = "http://sextractor.sourceforge.net/",
+	refdate = "",
+}
