--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -42,6 +42,8 @@ Table.~\ref{evaluation:storage_environment}.
 All the compute nodes, I/O nodes and master node connect with interconnection network inside Amazon
 EC2, and mount storage system by sshfs\cite{sshfs} via Internet.
 
+We use gxp\cite{gxp} to distribute work flow over compute nodes.
+
 \subsection{One User Performance}
 
 \begin{figure}
