--- a/paper/src/ref/reference.bib
+++ b/paper/src/ref/reference.bib
@@ -437,14 +437,15 @@ pages={24-28},
 keywords={Linux;cloud computing;mainframes;meta data;open systems;DHFS;I-O nodes;Linux;Solaris;Unix;Windows;cloud storage mainframe;distributed structure;high-throughput distribute heterogeneous file system;mainframe open system accessing files;metadata server;performance optimization;user data;user-level library;Cloud computing;Delay;File systems;Open systems;Servers;Throughput;Writing;Cloud Storage;Distributed File System;Heterogeneous Share;High-Throughput}, 
 doi={10.1109/PAAP.2011.13},}
 
-@INPROCEEDINGS{Input/output_behavior_of_supercomputing_applications, 
-author={Miller, E.L. and Katz, R.H.}, 
-booktitle={Supercomputing, 1991. Supercomputing '91. Proceedings of the 1991 ACM/IEEE Conference on}, 
-title={Input/output behavior of supercomputing applications}, 
-year={1991}, 
-month={Nov}, 
-pages={567-576}, 
-doi={10.1145/125826.126133},}
+@INPROCEEDINGS{Investigation_of_Data_Locality_in_MapReduce, 
+author={Zhenhua Guo and Fox, G. and Mo Zhou}, 
+booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2012 12th IEEE/ACM International Symposium on}, 
+title={Investigation of Data Locality in MapReduce}, 
+year={2012}, 
+month={May}, 
+pages={419-426}, 
+keywords={data handling;information retrieval;parallel processing;processor scheduling;storage management;cross-cluster environments;cross-switch network traffic;data access requirements;data intensive computing;data locality;data parallel systems;default Hadoop scheduling;job execution time;mathematical model;multiuser environments;performance improvement;single cluster environments;Computer architecture;Data models;Optimal scheduling;Schedules;Scheduling;Scheduling algorithms;Hadoop;MapReduce;data locality;scheduling}, 
+doi={10.1109/CCGrid.2012.42},}
 
 @webpage{fitsio,
 	title = "FITSIO",
@@ -457,5 +458,47 @@ doi={10.1145/125826.126133},}
 	title = "SExtractor",
 	organization ="",
 	url = "http://sextractor.sourceforge.net/",
+	refdate = "",
+}
+
+@INPROCEEDINGS{Intrinsic_data_locality_of_modern_scientific_workloads, 
+author={Ramanathan, S. and Srinivasan, R. and Cook, J.}, 
+booktitle={Workload Characterization, 2003. WWC-6. 2003 IEEE International Workshop on}, 
+title={Intrinsic data locality of modern scientific workloads}, 
+year={2003}, 
+month={Oct}, 
+pages={77-85}, 
+keywords={cache storage;memory architecture;performance evaluation;statistical analysis;SPEC2000 workloads;analytic model;cache configurations;cache hit ratios;cache performance;cache sizes;intrinsic data locality;memory performance prediction;microarchitecture-dependent metric;microarchitecture-independent characterization;microarchitecture-independent manner;modern scientific workloads;quantitative statistics;Data engineering;Degradation;Delay effects;Microarchitecture;Modems;Particle measurements;Performance analysis;Size measurement;Statistics}, 
+doi={10.1109/WWC.2003.1249059},}
+
+@INPROCEEDINGS{Data_locality_characterization_of_OLTP, 
+author={Zhang Jing and Deng Lin and Dou Yong}, 
+booktitle={Advanced Computer Theory and Engineering (ICACTE), 2010 3rd International Conference on}, 
+title={Data locality characterization of OLTP applications and its effects on cache performance}, 
+year={2010}, 
+month={Aug}, 
+volume={3}, 
+pages={V3-580-V3-584}, 
+keywords={cache storage;query processing;transaction processing;OLTP query processing;cache performance;data locality characterization;intensive memory access;online transaction processing;Computers;Educational institutions;Fires;Nickel;OLTP;TPC-C;cache performance;data locality}, 
+doi={10.1109/ICACTE.2010.5579552}, 
+ISSN={2154-7491},}
+
+@ARTICLE{Analyzing_data_locality_in_numeric_applications, 
+author={Sanchez, J. and Gonzalez, A.}, 
+journal={Micro, IEEE}, 
+title={Analyzing data locality in numeric applications}, 
+year={2000}, 
+month={Jul}, 
+volume={20}, 
+number={4}, 
+pages={58-66}, 
+keywords={program compilers;program diagnostics;SPLAT;compile time;memory behavior;profiling data;profiling support;static locality analysis;Data analysis;Hardware;Information analysis;Interference;Microprocessors;Performance analysis;Prefetching;Program processors;Programming profession;Runtime}, 
+doi={10.1109/40.865867}, 
+ISSN={0272-1732},}
+
+@webpage{gxp,
+	title = "GXP Grid & Cluster Shell",
+	organization ="",
+	url = "http://www.logos.ic.i.u-tokyo.ac.jp/gxp/index.php?FrontPage",
 	refdate = "",
 }
