--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -88,12 +88,15 @@ in cloud computing through experimental and simulation evaluation.
 \input{src/implementation.tex}
 
 %section V
-\input{src/evaluation.tex}
+\input{src/modeling.tex}
 
 %section VI
-\input{src/related_work.tex}
+\input{src/evaluation.tex}
 
 %section VII
+\input{src/related_work.tex}
+
+%section VIII
 \input{src/conclusion.tex}
 
 \section*{Acknowledgement}
