--- a/paper/src/ref/reference.bib
+++ b/paper/src/ref/reference.bib
@@ -497,7 +497,7 @@ doi={10.1109/40.865867},
 ISSN={0272-1732},}
 
 @webpage{gxp,
-	title = "GXP Grid & Cluster Shell",
+	title = "GXP",
 	organization ="",
 	url = "http://www.logos.ic.i.u-tokyo.ac.jp/gxp/index.php?FrontPage",
 	refdate = "",
