--- a/paper/src/implementation.tex
+++ b/paper/src/implementation.tex
@@ -167,9 +167,8 @@ Third, in the node addition and deletion, there is no load balance in our protot
 Without load balance, after node added into the system, it needs a long time to achieve speed up.
 Also in the node deletion, file write back and re-buffer are required.
 
-However, in this paper, our aim is to validate effectiveness of burst buffers in cloud, we can still
-show the effectiveness of burst buffers.
-
-\xtq{1.突っ込まれる箇所とdefence}
-\xtq{2.今回の目的はburst bufferの有効性を示すためてある、大した問題ではない}
+In this paper, our aim is to validate effectiveness of burst buffers in
+cloud.
+Although we have these limitation in prototype, we can still show the effectiveness of burst
+buffers.
 
